--- a/coins-ddlp-front/src/app/features/pesetas/components/pesetas-list/pesetas-list.component.scss
+++ b/coins-ddlp-front/src/app/features/pesetas/components/pesetas-list/pesetas-list.component.scss
@@ -28,10 +28,6 @@
 :host ::ng-deep .p-datatable-tbody > tr.clickable-row {
   cursor: pointer;
 
-  > td {
-    transition: background-color 0.15s;
-  }
-
   &:hover > td {
     background: rgba(var(--cobalt-rgb), 0.08);
   }
